<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Book Inventory</string>
    <string name="add_book">Add a book</string>
    <string name="add_supplier">Add a supplier</string>
    <string name="books">Books</string>
    <string name="suppliers">Suppliers</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="insert_dummy_book">+ dummy book</string>
    <string name="insert_dummy_supplier">+ dummy supplier</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="delete_all_title">Delete ALL DATA from the catalogs?</string>
    <string name="delete_all_message">All books and suppliers will be removed. It cannot be undone.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="book_overview">Book overview</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="price">Price</string>
    <string name="priceless">priceless</string>
    <string name="price_hint">for one book</string>
    <string name="price_unit">zł</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_hint">Number of books</string>
    <string name="plus">+</string>
    <string name="minus">&#8212;</string>
    <string name="no_books">No books in the stock, cannot be less.</string>
    <string name="full_stock">The stock is full. Your limit is <xliff:g example="2" id="number">%d</xliff:g>.</string>
    <string name="book_limit">Your limit is <xliff:g example="2" id="number">%d</xliff:g> copies. Setting quantity to <xliff:g example="2" id="number">%d</xliff:g>.</string>
    <string name="quantity_updated">Quantity updated.</string>
    <string name="book_required">Book\'s title and supplier are required.</string>
    <string name="book_saved">Book saved.</string>
    <string name="book_updated">Book updated.</string>
    <string name="book_deleted">Book deleted.</string>
    <string name="error_save_book">Error with saving book.</string>
    <string name="error_update_book">Error with updating book.</string>
    <string name="error_delete_book">Error with deleting item.</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_overview">Supplier overview</string>
    <string name="no_suppliers">No suppliers on the list. Add some first.</string>
    <string name="add_new_sup">Add a new supplier</string>
    <string name="edit_supplier">Edit a supplier</string>
    <string name="dummy_name">Supplier\'s name</string>
    <string name="address">Address</string>
    <string name="address_unknown">Address unknown</string>
    <string name="dummy_address">ul. Gadających Drzew 12, 56–879 Strzegom</string>
    <string name="phone">Phone</string>
    <string name="phone_format">+48123456789</string>
    <string name="email">E-mail</string>
    <string name="email_hint">example@example.com</string>
    <string name="suppliers_books">Supplier\'s books</string>
    <string name="cannot_email">E-mail unknown, cannot write to supplier.</string>
    <string name="call_supplier">Call the supplier</string>
    <string name="supplier_required">Name and phone number are required.</string>
    <string name="supplier_saved">Supplier saved.</string>
    <string name="supplier_updated">Supplier updated.</string>
    <string name="supplier_deleted">Supplier deleted.</string>
    <string name="error_save_sup">Error with saving supplier.</string>
    <string name="error_update_sup">Error with updating supplier.</string>
    <string name="error_delete_sup">Error with deleting supplier.</string>
    <string name="sale">Sale</string>
    <string name="books_left">Only <xliff:g example="2" id="number">%d</xliff:g> books left. Consider ordering some.</string>
    <string name="order">Order</string>
    <string name="no_books_title">It\'s a bit empty here…</string>
    <string name="no_books_subtitle">Let\'s build a bookcase by adding some books.</string>
    <string name="no_suppliers_title">No suppliers on the list.</string>
    <string name="no_suppliers_subtitle">Add some contacts to start doing business.</string>
    <string name="no_suppliers_books">No books from this supplier. Click here and add some now.</string>
    <string name="icon_description">a bookcase</string>
    <string name="edit_book">Edit a book</string>
    <string name="discard_quit">Discard your changes and quit editing?</string>
    <string name="keep_editing">Keep editing</string>
    <string name="discard">Discard</string>
    <string name="delete_item">Delete this position from the catalog?</string>
    <string name="book_order">Book order</string>
    <string name="empty_data">----------</string>
    <string name="settings">Settings</string>
    <string name="inventory_settings">Inventory Settings</string>
    <string name="warn_number_label">Warn me when copies decrease to</string>
    <string name="warn_number_default">2</string>
    <string name="warn_number_key" translatable="false">warning_number</string>
    <string name="max_stock_label">Maximum copies of a book</string>
    <string name="max_stock_default">100</string>
    <string name="max_stock_key" translatable="false">max_number</string>
    <string name="sort_books_label">Sort books</string>
    <string name="sort_books_default">@string/sort_abc_value</string>
    <string name="sort_books_key" translatable="false">order_books</string>
    <string name="sort_abc_label">Titles A&#8212;Z</string>
    <string name="sort_abc_value" translatable="false">alphabet</string>
    <string name="sort_zyx_label">Titles Z&#8212;A</string>
    <string name="sort_zyx_value" translatable="false">reverse_alphabet</string>
    <string name="sort_old_new_label">Oldest on top</string>
    <string name="sort_old_new_value" translatable="false">oldest_top</string>
    <string name="sort_new_old_label">Newest on top</string>
    <string name="sort_new_old_value" translatable="false">newest_top</string>
</resources>