<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/dummy_book"
        android:title="@string/insert_dummy_book"
        app:showAsAction="never" />
    <item
        android:id="@+id/dummy_supplier"
        android:title="@string/insert_dummy_supplier"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_books"
        android:title="@string/add_book"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_supplier"
        android:title="@string/add_supplier"
        app:showAsAction="never" />
    <item
        android:id="@+id/setting"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_data"
        android:title="@string/delete_all_data"
        app:showAsAction="never" />
</menu>