<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/standard_padding"
            tools:context=".BookEditor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/EditorCategory"
                    android:text="@string/title" />

                <EditText
                    android:id="@+id/book_title"
                    style="@style/EditorInserts.Simple"
                    android:hint="@string/title"
                    android:inputType="textCapSentences|textMultiLine"
                    android:lines="2"
                    android:maxLines="2"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/EditorCategory"
                    android:text="@string/author" />

                <EditText
                    android:id="@+id/book_author"
                    style="@style/EditorInserts.Simple"
                    android:hint="@string/author"
                    android:inputType="textCapWords|textMultiLine"
                    android:lines="2"
                    android:maxLines="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/EditorCategory"
                    android:text="@string/price" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/book_price"
                        style="@style/EditorInserts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:hint="@string/price_hint"
                        android:inputType="numberDecimal"
                        android:maxLength="7" />

                    <TextView
                        style="@style/EditorInserts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/standard_padding"
                        android:layout_marginStart="@dimen/standard_padding"
                        android:layout_toEndOf="@id/book_price"
                        android:text="@string/price_unit" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/EditorCategory"
                    android:text="@string/quantity" />

                <EditText
                    android:id="@+id/books_quantity"
                    style="@style/EditorInserts.Simple"
                    android:hint="@string/quantity_hint"
                    android:inputType="number"
                    android:maxLength="4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/EditorCategory"
                    android:text="@string/supplier" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/spinner_suppliers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown" />

                    <TextView
                        android:id="@+id/no_suppliers_text"
                        style="@style/EditorInserts"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/suppliers_phone"
                        style="@style/EditorInserts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/button_margin"
                android:background="@color/buttonColor"
                android:fontFamily="serif-monospace"
                android:padding="@dimen/standard_padding"
                android:text="@string/add_new_sup"
                android:textColor="@color/colorBackground"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</layout>