<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/standard_padding"
            tools:context=".BookDetails">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailsCategory"
                    android:text="@string/title" />

                <TextView
                    android:id="@+id/book_title"
                    style="@style/DetailsInfo"
                    android:ellipsize="end"
                    tools:text="@string/title" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailsCategory"
                    android:text="@string/author" />

                <TextView
                    android:id="@+id/book_author"
                    style="@style/DetailsInfo"
                    android:ellipsize="end"
                    tools:text="@string/author" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DetailsCategory"
                    android:text="@string/price" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/book_price"
                        style="@style/EditorInserts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        tools:text="@string/price" />

                    <TextView
                        style="@style/EditorInserts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/standard_padding"
                        android:layout_toEndOf="@id/book_price"
                        android:text="@string/price_unit" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/standard_padding">

                <TextView
                    style="@style/DetailsCategory"
                    android:layout_gravity="center_vertical"
                    android:paddingBottom="@dimen/standard_padding"
                    android:text="@string/quantity" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/minus_button"
                        style="@style/ButtonsSmall"
                        android:text="@string/minus" />

                    <TextView
                        android:id="@+id/book_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/standard_padding"
                        android:layout_marginStart="@dimen/standard_padding"
                        tools:text="20" />

                    <Button
                        android:id="@+id/plus_button"
                        style="@style/ButtonsSmall"
                        android:text="@string/plus" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/DetailsCategory"
                    android:text="@string/supplier" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/standard_padding">

                    <TextView
                        android:id="@+id/supplier_name"
                        style="@style/DetailsInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/supplier" />

                    <TextView
                        android:id="@+id/suppliers_phone"
                        style="@style/DetailsInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/phone" />

                    <TextView
                        android:id="@+id/supplier_address"
                        style="@style/DetailsInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/address" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/call_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/double_padding"
                android:background="@color/buttonColor"
                android:drawablePadding="@dimen/standard_padding"
                android:drawableStart="@drawable/ic_phone"
                android:fontFamily="serif-monospace"
                android:padding="@dimen/standard_padding"
                android:text="@string/order"
                android:textColor="@color/colorBackground"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</layout>